--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.1",
+    "chart.js": "^4.4.4",
     "express": "^4.18.2",
     "json-server": "^1.0.0-beta.2",
+    "ng2-charts": "^6.0.1",
     "ngx-quill": "^26.0.8",
     "quill": "^2.0.2",
     "rxjs": "~7.8.0",
